crates/pardosa-schema/tests/compile_fail/evt_004.rs
use pardosa_schema::GenomeSafe;
use serde::Serialize;
#[derive(Serialize, GenomeSafe)]
struct BadStruct {
    n: usize,
}
fn main() {}
