crates/pardosa-schema/tests/compile_fail/evt_004.stderr
error: EVT-004: GenomeSafe: usize has platform-dependent size. Use u32/u64 for portable serialization.
 --> tests/compile_fail/evt_004.rs:5:8
  |
5 |     n: usize,
  |        ^^^^^
